Fix and silence warnings
* fix compiler warnings
* forward deprecated calls to their replacements
* remove illegal extension attributes
* remove unused private method
* refactor code to use newer Java runtime methods
* disable PDE deprecation warnings (they cannot be fixed in most cases)
* silence m2e warnings by adding m2e lifecycle mapping data to the pom